--- a/backroads-app/src/index.css
+++ b/backroads-app/src/index.css
@@ -205,10 +205,10 @@ Hero
   border-color: var(--clr-white);
 }
 @media screen and (min-width: 768px) {
-  /* .hero {
+  .hero {
     background: linear-gradient(rgb(44, 174, 186, 0.7), rgba(0, 0, 0, 0.7)),
-      url('../images/main.jpeg') center/cover no-repeat;
-  } */
+      url('./images/main.jpeg') center/cover no-repeat;
+  }
   .hero-banner {
     padding: 0;
   }
@@ -558,3 +558,6 @@ Navbar
     color: var(--clr-primary-8);
   }
 }
+/* set hero to 
+min-height:calc(100vh - 62px);
+*/
